syntax = "proto3";

option java_multiple_files = true;
option java_package = "tuya.tedge.driver.sdk.grpc.gateway";
option java_outer_classname = "GatewayProto";
option objc_class_prefix = "GW";
import "google/protobuf/empty.proto";

service RpcGatewayForDevice {
    // 获取网关信息
    rpc GetGatewayInfo(google.protobuf.Empty) returns (GateWayInfoResponse) {}
}

// 网关信息
message GateWayInfoResponse {
    string env = 2;
    string gw_id = 3;
    string local_key = 4;
    string region = 6;
    bool is_new_model = 15;     // thing model
    bool cloud_state = 17;
    string gateway_name = 19;
}
